[gd_scene load_steps=86 format=2]

[ext_resource path="res://dude/dance2.png" type="Texture" id=1]
[ext_resource path="res://dude/dance1.png" type="Texture" id=2]
[ext_resource path="res://dude/dance1_dead.png" type="Texture" id=3]
[ext_resource path="res://dude/dance2_dead.png" type="Texture" id=4]
[ext_resource path="res://dude/Dude.gd" type="Script" id=5]
[ext_resource path="res://dude/dance3_dead.png" type="Texture" id=6]
[ext_resource path="res://dude/dance3.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "dance_1_alive",
"speed": 2.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "dance_2_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "dance_3_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "dance_3_alive",
"speed": 2.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "dance_1_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "dance_2_alive",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "dance_1_alive",
"speed": 2.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "dance_2_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "dance_3_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "dance_3_alive",
"speed": 2.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "dance_1_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "dance_2_alive",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "dance_1_alive",
"speed": 2.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "dance_2_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "dance_3_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "dance_3_alive",
"speed": 2.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "dance_1_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "dance_2_alive",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=52]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "dance_1_alive",
"speed": 2.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "dance_2_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "dance_3_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "dance_3_alive",
"speed": 2.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "dance_1_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "dance_2_alive",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=65]
animations = [ {
"frames": [ SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "dance_1_alive",
"speed": 2.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "dance_2_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "dance_3_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "dance_3_alive",
"speed": 2.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "dance_1_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "dance_2_alive",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 2 )
region = Rect2( 352, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 4 )
region = Rect2( 352, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 6 )
region = Rect2( 352, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 7 )
region = Rect2( 352, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 3 )
region = Rect2( 352, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 1 )
region = Rect2( 352, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=78]
animations = [ {
"frames": [ SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "dance_1_alive",
"speed": 2.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "dance_2_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "dance_3_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ) ],
"loop": true,
"name": "dance_3_alive",
"speed": 2.0
}, {
"frames": [ SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "dance_1_dead",
"speed": 2.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ) ],
"loop": true,
"name": "dance_2_alive",
"speed": 2.0
} ]

[node name="Dude" type="Node2D"]
script = ExtResource( 5 )

[node name="ArmRight" type="AnimatedSprite" parent="."]
scale = Vector2( 6, 6 )
frames = SubResource( 13 )
animation = "dance_1_alive"
frame = 1
playing = true

[node name="Body" type="AnimatedSprite" parent="."]
scale = Vector2( 6, 6 )
frames = SubResource( 26 )
animation = "dance_1_alive"
frame = 1
playing = true

[node name="LegLeft" type="AnimatedSprite" parent="."]
scale = Vector2( 6, 6 )
frames = SubResource( 39 )
animation = "dance_1_alive"
frame = 1
playing = true

[node name="LegRight" type="AnimatedSprite" parent="."]
scale = Vector2( 6, 6 )
frames = SubResource( 52 )
animation = "dance_1_alive"
frame = 1
playing = true

[node name="ArmLeft" type="AnimatedSprite" parent="."]
scale = Vector2( 6, 6 )
frames = SubResource( 65 )
animation = "dance_1_alive"
frame = 1
playing = true

[node name="Head" type="AnimatedSprite" parent="."]
scale = Vector2( 6, 6 )
frames = SubResource( 78 )
animation = "dance_1_alive"
frame = 1
playing = true
